--- a/posts/api-journey-server-side.mdx
+++ b/posts/api-journey-server-side.mdx
@@ -1,6 +1,6 @@
 # API Journey – Server Side
 
-Previously I summarised this blog’s <Link href='/posts/api-platform-design'>API Platform Overview</Link> to express some essential high-level ingredients. Next I take a closer look into end-to-end technical behaviors for APIs. I implement them in this blog’s final API code samples, in multiple technology stacks:
+Previously I summarised this blog’s <Link href='/posts/api-platform-design'>API Platform Overview</Link> to express some essential high-level ingredients. Next I summarise some end-to-end technical behaviors for OAuth-secured APIs, which I implemnt in this blog’s final API code samples, in multiple technology stacks:
 
 - <Link href='/posts/api-architecture-node/'>Final Node.js API</Link>
 - <Link href='/posts/net-core-code-sample-overview'>Final .NET API</Link>
