--- a/posts/android-coding-key-points.mdx
+++ b/posts/android-coding-key-points.mdx
@@ -1,4 +1,4 @@
-# Android Code Sample – Code Overview
+# Android Code Sample – Code Details
 
 Previously we described our <Link href='/posts/android-infrastructure-setup'>Android Infrastructure Setup</Link> and we will now look at some key areas of our sample’s code. See also the <Link href='/posts/api-journey-client-side'>Client Side API Journey</Link> to understand the background and the requirements being met.
 
