--- a/posts/android-setup.mdx
+++ b/posts/android-setup.mdx
@@ -1,6 +1,6 @@
 # Android Setup and AppAuth Sample
 
-Previously we discussed <Link href='/posts/final-desktop-app-coding-key-points'>Code Overview</Link> for the final desktop code sample. Next we will get a basic Android OAuth setup working, by running the AppAuth Android code sample.
+Previously we discussed <Link href='/posts/final-desktop-app-coding-key-points'>Code Details</Link> for the final desktop code sample. Next we will get a basic Android OAuth setup working, by running the AppAuth Android code sample.
 
 ### Step 1: Install Android Studio
 
