--- a/posts/api-automated-tests.mdx
+++ b/posts/api-automated-tests.mdx
@@ -1,6 +1,6 @@
 # API Automated Tests
 
-In the previous post we described the <Link href='/posts/spring-boot-api-coding-model'>Java Spring Boot API Code Overview</Link>. Next we will describe one way to test OAuth secured APIs, with a focus on *Developer Productivity*.
+In the previous post we described the <Link href='/posts/spring-boot-api-coding-model'>Java Spring Boot API Code Details</Link>. Next we will describe one way to test OAuth secured APIs, with a focus on *Developer Productivity*.
 
 ### Getting an Access Token
 
