--- a/posts/api-platform-design.mdx
+++ b/posts/api-platform-design.mdx
@@ -1,6 +1,6 @@
 # API Platform Overview
 
-Previously I completed this blog’s SPA theme with a <Link href='/posts/reactjs-codingkeypoints'>Final SPA Code Overview</Link>. Next, I summarise what I consider to be the most essential technical behaviours for a platform of many APIs in an OAuth architecture.
+Previously I completed this blog’s SPA theme with some <Link href='/posts/reactjs-codingkeypoints'>Final SPA Code Details</Link>. Next, I summarise what I consider to be the most essential technical behaviours for a platform of many APIs in an OAuth architecture.
 
 ### API Technical Goals
 
