--- a/posts/basicapi-codingkeypoints.mdx
+++ b/posts/basicapi-codingkeypoints.mdx
@@ -1,6 +1,6 @@
-# Basic API – Code Overview
+# Basic API – Code Details
 
-The previous post provided an <Link href='/posts/basicspa-codingkeypoints'>SPA Code Overview</Link> for the initial code sample. This post does a similar breakdown for the code sample's API.
+The previous post explained some <Link href='/posts/basicspa-codingkeypoints'>SPA Code Details</Link> for the initial code sample. This post provides a similar breakdown for the API.
 
 ### Code Layout
 
