--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -1,4 +1,4 @@
-# Basic SPA – Code Overview
+# Basic SPA – Code Details
 
 The <Link href='/posts/basicspa-oauthworkflow'>SPA and API OAuth Messages</Link> post explained the initial code sample's HTTP/S messages. In this post I drill into some identity-related code in the SPA.
 
@@ -515,5 +515,5 @@ I explained the initial SPA's code, where the oidc-client-ts security library is
 
 ### Next
 
-- I provide an <Link href='/posts/basicapi-codingkeypoints'>API Code Overview</Link> for the first code sample.
+- I provide an <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> for the first code sample.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
