--- a/posts/basicspa-oauthworkflow.mdx
+++ b/posts/basicspa-oauthworkflow.mdx
@@ -276,5 +276,5 @@ The code sample shows how an organization can integrate an SPA and API with its 
 
 ### Next
 
-- I provide an <Link href='/posts/basicspa-codingkeypoints'>SPA Code Overview</Link> for the first code sample.
+- I explain some <Link href='/posts/basicspa-codingkeypoints'>SPA Code Details</Link> for the first code sample.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
