--- a/posts/cloud-hosting.mdx
+++ b/posts/cloud-hosting.mdx
@@ -1,6 +1,6 @@
 # Cloud Hosting Overview
 
-Previously we completed our mobile theme by discussing <Link href='/posts/ios-code-sample-coding-key-points'>Code Overview</Link> for our iOS code sample. Next we will begin a theme on modern deployment, and describe how the corresponding cloud infrastructure was created.
+Previously we completed our mobile theme by discussing <Link href='/posts/ios-code-sample-coding-key-points'>Code Details</Link> for our iOS code sample. Next we will begin a theme on modern deployment, and describe how the corresponding cloud infrastructure was created.
 
 ### URL Design
 
