--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -227,6 +227,6 @@ We have used our second SPA to build an OAuth-secured desktop app, which runs on
 
 ### Next
 
-- Next I provide a <Link href='/posts/desktop-app-coding-key-points'>Desktop App Code Overview</Link>
+- Next I provide a <Link href='/posts/desktop-app-coding-key-points'>Desktop App Code Details</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
 
