--- a/posts/final-nodeapi-coding-key-points.mdx
+++ b/posts/final-nodeapi-coding-key-points.mdx
@@ -1,4 +1,4 @@
-# Node.js API – Code Overview
+# Node.js API – Code Details
 
 In our last post we started describing an advanced code sample that implemented our <Link href='/posts/api-architecture-node'>API Architecture in Node.js</Link>. We will now drill into some final implementation details.
 
