--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -264,5 +264,5 @@ I have added missing features to the SPA and API behaviour, to improve SPA sessi
 
 ### Next
 
-- I provide an <Link href='/posts/updated-spa-coding-key-points'>Updated SPA Code Overview</Link>.
+- I explain some <Link href='/posts/updated-spa-coding-key-points'>Updated SPA Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
