--- a/posts/java-spring-boot-api-overview.mdx
+++ b/posts/java-spring-boot-api-overview.mdx
@@ -1,6 +1,6 @@
 # Java API – Overview
 
-Previously we described the <Link href='/posts/final-nodeapi-coding-key-points'>Code Overview</Link> that included some behaviours from this blog’s <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link> blog post. Next we will provide an equivalent API in Java and Spring.
+Previously we described the <Link href='/posts/final-nodeapi-coding-key-points'>Code Details</Link> that included some behaviours from this blog’s <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link> blog post. Next we will provide an equivalent API in Java and Spring.
 
 ### Final API Code Sample Overview
 
