--- a/posts/net-core-api-coding-model.mdx
+++ b/posts/net-core-api-coding-model.mdx
@@ -1,4 +1,4 @@
-# .NET API – Code Overview
+# .NET API – Code Details
 
 In our previous post we described our <Link href='/posts/net-core-api-oauth-integration'>.NET API OAuth Integration</Link>. We will now drill into some final implementation details.
 
