--- a/posts/net-core-api-oauth-integration.mdx
+++ b/posts/net-core-api-oauth-integration.mdx
@@ -372,5 +372,5 @@ We have implemented .NET API Security in a requirements first manner, to enable 
 
 ### Next
 
-- Next I provide a <Link href='/posts/net-core-api-coding-model'>.NET API Code Overview</Link>.
+- Next I provide a <Link href='/posts/net-core-api-coding-model'>.NET API Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
