--- a/posts/reactjs-codingkeypoints.mdx
+++ b/posts/reactjs-codingkeypoints.mdx
@@ -1,4 +1,4 @@
-# Final SPA – Code Overview
+# Final SPA – Code Details
 
 Previously I explained <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Final SPA</Link>, which uses cookies to transport short-lived access tokens to APIs. Next I describe the main changes to the SPA's code, with a particular focus on API requests. See also the <Link href='/posts/api-journey-client-side'>Client Side API Journey</Link> for a summary of the requirements being met.
 
