--- a/posts/serverless-api-deployment.mdx
+++ b/posts/serverless-api-deployment.mdx
@@ -239,5 +239,5 @@ We have ported our earlier Node.js API to run with low cost and zero maintenance
 
 ### Next
 
-- Next we will explain some <Link href='/posts/serverless-api-coding-model'>Serverless API Code Overview</Link>
+- Next we will explain some <Link href='/posts/serverless-api-coding-model'>Serverless API Code Details</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
