--- a/posts/spring-boot-api-coding-model.mdx
+++ b/posts/spring-boot-api-coding-model.mdx
@@ -1,4 +1,4 @@
-# Java API – Code Overview
+# Java API – Code Details
 
 In our previous post we described our <Link href='/posts/spring-boot-api-oauth-integration'>Spring Boot API OAuth Integration</Link>. We will now drill into some final implementation details.
 
