--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -1,10 +1,10 @@
-# Updated API – Code Overview
+# Updated API – Code Details
 
-The previous post I provided an <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link> for the second code sample. Next I summarise the main API code changes.
+The previous post I explained some <Link href='/posts/updated-spa-coding-key-points'>SPA Code Details</Link> for the second code sample. Next I summarise the main API code changes.
 
 ### API Authorization Implementation
 
-In the first sample’s <Link href='/posts/basicapi-codingkeypoints'>API Code Overview</Link> we explained that OAuth processing consists of the following two main code areas:
+In the first sample’s <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link> we explained that OAuth processing consists of the following two main code areas:
 
 | Responsibility | Description |
 | -------------- | ----------- |
