--- a/posts/updated-spa-coding-key-points.mdx
+++ b/posts/updated-spa-coding-key-points.mdx
@@ -1,4 +1,4 @@
-# Updated SPA – Code Overview
+# Updated SPA – Code Details
 
 In the previous post I described the behaviour of the <Link href='/posts/improved-spa-code-sample-overview'>Updated SPA and API Code Sample</Link>. Next I summarise some changes to the SPA code, with a particular focus on <Link href='/posts/user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</Link> and its difficulties.
 
@@ -311,5 +311,5 @@ I explained the code to complete the traditional SPA flow, with in-memory storag
 
 ### Next
 
-- Next I provide an <Link href='/posts/updated-api-coding-key-points'>Updated API Code Overview</Link>.
+- Next I provide an <Link href='/posts/updated-api-coding-key-points'>Updated API Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
