--- a/posts/final-desktop-sample-overview.mdx
+++ b/posts/final-desktop-sample-overview.mdx
@@ -1,6 +1,6 @@
 # Final Desktop App – Overview
 
-Previously we covered <Link href='/posts/desktop-app-coding-key-points'>Code Overview</Link> for our initial desktop app. Next we will add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
+Previously we covered <Link href='/posts/desktop-app-coding-key-points'>Code Details</Link> for our initial desktop app. Next we will add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
 
 ### New Features
 
@@ -237,5 +237,5 @@ We have updated our desktop code sample with some essential features. Private UR
 
 ### Next
 
-- I provide a <Link href='/posts/final-desktop-app-coding-key-points'>Final Desktop App Code Overview</Link>.
+- I provide a <Link href='/posts/final-desktop-app-coding-key-points'>Final Desktop App Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
