--- a/posts/how-to-run-the-react-js-spa.mdx
+++ b/posts/how-to-run-the-react-js-spa.mdx
@@ -230,5 +230,5 @@ I explained how to run the final SPA code sample, which has more moving parts th
 
 ### Next
 
-- Next I provide a <Link href='/posts/reactjs-codingkeypoints'>Final SPA Code Overview</Link>.
+- Next I explain some <Link href='/posts/reactjs-codingkeypoints'>Final SPA Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
