--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -13,8 +13,8 @@ The first theme focuses on foundations and core concepts. It provides integrated
 - <Link href='/posts/basicspa-overview'>Overview</Link>
 - <Link href='/posts/basicspa-execution'>How to Run the Sample</Link>
 - <Link href='/posts/basicspa-oauthworkflow'>OAuth Messages</Link>
-- <Link href='/posts/basicspa-codingkeypoints'>SPA Code Overview</Link>
-- <Link href='/posts/basicapi-codingkeypoints'>API Code Overview</Link>
+- <Link href='/posts/basicspa-codingkeypoints'>SPA Code Details</Link>
+- <Link href='/posts/basicapi-codingkeypoints'>API Code Details</Link>
 - <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link>
 
 **OAuth Setup**
@@ -36,8 +36,8 @@ The first theme focuses on foundations and core concepts. It provides integrated
 **Updated SPA Code Sample**
 
 - <Link href='/posts/improved-spa-code-sample-overview'>Overview / How to Run the Sample</Link>
-- <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link>
-- <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link>
+- <Link href='/posts/updated-spa-coding-key-points'>SPA Code Details</Link>
+- <Link href='/posts/updated-api-coding-key-points'>API Code Details</Link>
 
 **Variation – Microsoft Entra ID**
 
@@ -49,7 +49,7 @@ The first theme focuses on foundations and core concepts. It provides integrated
 - <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend Behaviour</Link>
 - <Link href='/posts/final-spa-overview'>Overview</Link>
 - <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Sample</Link>
-- <Link href='/posts/reactjs-codingkeypoints'>Code Overview</Link>
+- <Link href='/posts/reactjs-codingkeypoints'>Code Details</Link>
 
 ### Theme 2 – API Architecture
 
@@ -69,19 +69,19 @@ The next theme focuses on the API architecture. This includes coding aspects rel
 **Node.js API**
 
 - <Link href='/posts/api-architecture-node'>Overview</Link>
-- <Link href='/posts/final-nodeapi-coding-key-points'>Code Overview</Link>
+- <Link href='/posts/final-nodeapi-coding-key-points'>Code Details</Link>
 
 **.NET API**
 
 - <Link href='/posts/net-core-code-sample-overview'>Overview</Link>
 - <Link href='/posts/net-core-api-oauth-integration'>OAuth Integration</Link>
-- <Link href='/posts/net-core-api-coding-model'>Code Overview</Link>
+- <Link href='/posts/net-core-api-coding-model'>Code Details</Link>
 
 **Java Spring Boot API**
 
 - <Link href='/posts/java-spring-boot-api-overview'>Overview</Link>
 - <Link href='/posts/spring-boot-api-oauth-integration'>OAuth Integration</Link>
-- <Link href='/posts/spring-boot-api-coding-model'>Code Overview</Link>
+- <Link href='/posts/spring-boot-api-coding-model'>Code Details</Link>
 
 **Productivity**
 
@@ -99,12 +99,12 @@ This theme covers solutions for desktop and mobile apps, and uses the recommende
 
 - <Link href='/posts/desktop-apps-overview'>Overview</Link>
 - <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Sample</Link>
-- <Link href='/posts/desktop-app-coding-key-points'>Code Overview</Link>
+- <Link href='/posts/desktop-app-coding-key-points'>Code Details</Link>
 
 **Final Desktop App Code Sample**
 
 - <Link href='/posts/final-desktop-sample-overview'>Overview / How to Run the Sample</Link>
-- <Link href='/posts/final-desktop-app-coding-key-points'>Code Overview</Link>
+- <Link href='/posts/final-desktop-app-coding-key-points'>Code Details</Link>
 
 **Mobile Setup**
 
@@ -118,14 +118,14 @@ This theme covers solutions for desktop and mobile apps, and uses the recommende
 - <Link href='/posts/android-code-sample-overview'>Code Sample Behaviour</Link>
 - <Link href='/posts/basicandroidapp-execution'>How to Run the Sample</Link>
 - <Link href='/posts/android-infrastructure-setup'>Infrastructure Setup</Link>
-- <Link href='/posts/android-coding-key-points'>Code Overview</Link>
+- <Link href='/posts/android-coding-key-points'>Code Details</Link>
 
 **iOS Code Sample**
 
 - <Link href='/posts/ios-code-sample-overview'>Code Sample Behaviour</Link>
 - <Link href='/posts/how-to-run-the-ios-code-sample'>How to Run the Sample</Link>
 - <Link href='/posts/ios-code-sample-infrastructure'>Infrastructure Setup</Link>
-- <Link href='/posts/ios-code-sample-coding-key-points'>Code Overview</Link>
+- <Link href='/posts/ios-code-sample-coding-key-points'>Code Details</Link>
 
 ### Theme 4 – Cloud Deployment
 
@@ -145,7 +145,7 @@ The final theme covers end-to-end deployment of components to run in the cloud. 
 
 - <Link href='/posts/serverless-api-overview'>Serverless API Overview</Link>
 - <Link href='/posts/serverless-api-deployment'>Serverless API Deployment</Link>
-- <Link href='/posts/serverless-api-coding-model'>Serverless API Code Overview</Link>
+- <Link href='/posts/serverless-api-coding-model'>Serverless API Code Details</Link>
 
 **Cloud Native**
 
