--- a/posts/quick-start.mdx
+++ b/posts/quick-start.mdx
@@ -1,6 +1,6 @@
 # Code Samples Quick Start
 
-This page briefly summarises the blog’s final code samples. These all use only fictional data and user accounts. They include frontends that call cloud hosted APIs and a cloud hosted authorization server. For each app, one of the following credentials can be used to sign in:
+This page briefly summarises the blog’s final code samples, which use only fictional data and user accounts. They include frontends that call cloud hosted APIs and a cloud hosted authorization server. For each app, you can use one of the following credentials to sign in:
 
 - Demo user with low privileges: *guestuser@example.com*
 - Demo user with high privileges: *guestadmin@example.com*
@@ -8,31 +8,31 @@ This page briefly summarises the blog’s final code samples. These all use only
 
 ### Secured Single Page Application
 
-This is a React SPA that implements OpenID Connect via the *Token Handler Pattern*. It uses only the latest and strongest secure cookies in the browser, while also enabling pure SPA development and deployment.
+The React SPA implements OpenID Connect using the *Token Handler Pattern*. It uses SameSite cookies to transport short-lived access tokens to APIs, while also enabling pure SPA development and deployment.
 
 ![SPA view](/images/3/spa-view.jpg?v=20240713)
 
-The SPA is deployed to many global locations using AWS CloudFront. Anyone can run the app via the below link:
+I deploy the SPA to many global locations using AWS CloudFront. Anyone can run the app via the below link:
 
 - [https://www.authsamples.com](https://www.authsamples.com)
 
-Alternatively, you can follow the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA Instructions</Link> to run the app's code locally and connect it to cloud-hosted API endpoints. In either case, login with one of the test accounts:
+Alternatively, you can follow the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA Instructions</Link> to run the app's code locally and connect it to cloud-hosted API endpoints. In either case, sign in with one of the test accounts:
 
 ![SPA login](/images/3/spa-login.jpg?v=20240713)
 
 ### Secured Desktop App
 
-The desktop code sample is a cross platform Electron React app that runs on Windows, macOS and Linux. The [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) implements Open ID Connect and logins use the system browser:
+The cross platform Electron React app runs on Windows, macOS and Linux. The [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) implements Open ID Connect and logins use the system browser:
 
 ![Desktop view](/images/3/desktop-view.jpg)
 
-The app receives login responses on a private URI scheme redirect URI and returns to the foreground. To run the app on your local computer you can follow the <Link href='/posts/final-desktop-sample-overview'>Final Desktop App Instructions</Link>.
+The app receives login responses on a redirect URI that uses a private-use URI scheme. To run the app on your local computer you can follow the <Link href='/posts/final-desktop-sample-overview'>Final Desktop App Instructions</Link>.
 
 ![Desktop login](/images/3/desktop-login.jpg)
 
 ### Secured Android App
 
-The Android App is a Single Activity App that uses Kotlin and Jetpack Compose. The [Android AppAuth Library](https://github.com/openid/AppAuth-Android) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as app links.
+The Android App is a Single Activity App that uses Kotlin and Jetpack Compose. The [Android AppAuth Library](https://github.com/openid/AppAuth-Android) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as Android app links.
 
 <div className="smallimage">
 ![Android view](/images/3/android-view.jpg)
@@ -46,7 +46,7 @@ Logins run on a *Chrome Custom Tab*, with modern security and good usability. To
 
 ### Secured iOS App
 
-The [iOS AppAuth Library](https://github.com/openid/AppAuth-iOS) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as universal links.
+The [iOS AppAuth Library](https://github.com/openid/AppAuth-iOS) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as iOS universal links.
 
 <div className="smallimage">
 ![iOS view](/images/3/ios-view.jpg?v=20240713)
@@ -58,9 +58,9 @@ Logins run on Apple’s *ASWebAuthenticationSession* window. To run the app from
 ![iOS login](/images/3/ios-login.jpg?v=20240713)
 </div>
 
-### API Behaviour
+### API and Client Behaviors
 
-APIs support the frontend code samples. The following blog posts walk through the key technical behaviours, including areas such as reliability, extensibility and productive development. In addition to good security, the end result should be a modern all round architecture with the best separation of concerns.
+APIs support the frontend code samples and help to ensure reliable end-to-end flows. The following posts walk through the key technical behaviours that I use for both APIs and clients, to achieve a modern and productive architecture.
 
 - <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>
 - <Link href='/posts/api-journey-client-side'>API Journey – Client Side</Link>
