--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -1,10 +1,10 @@
 # Introduction
 
-This blog is a getting started guide for developing modern APIs, browser based apps and mobile apps. The main focus is reliability and productive development setups so that you manage the distributed architecture effectively. Before getting into the details, let’s set the scene in terms of related business goals and requirements.
+This blog is a getting started guide for developing modern APIs, browser based apps and mobile apps. With modern technology stacks this seems straightforward at first sight, but end-to-end flows require technical foundations before such solutions are production-ready. Therefore, I focus on productive ways to enable them when running a distributed architecture.
 
-### Software Platforms
 
-Organizations often want to build interactive web and API solutions, to enable a modern and dynamic user experience. It is common to therefore build *Single Page Applications (SPA)*, with a technical focus on frontend development. Later, the organization add mobile apps that use the same APIs. All of this seems straightforward, but end-to-end flows require foundations before the solution is production-ready.
+
+
 
 ### API Foundations
 
@@ -14,23 +14,23 @@ Before most APIs and clients can be run in production, they need a number of tec
 | ------- | ----------- | 
 | <span style={{color:'green'}}>**Secure**</span> | Dealing with user authentication and API message credentials, to secure access to data. |
 | <span style={{color:'green'}}>**Reliable**</span> | Ensuring that the moving parts of the overall implementation provide a reliable solution. |
-| <span style={{color:'green'}}>**Productive**</span> | The setup should be understood by engineering teams and should not have adverse effects on how they run their components. |
+| <span style={{color:'green'}}>**Productive**</span> | Engineering teams should understood the setup and it should not adversely affect how they run their components. |
 | <span style={{color:'green'}}>**Scalable**</span> | It must be possible to extend the architecture to many components, without a major increase in complexity. |
 
 ### The OAuth 2.0 Authorization Framework
 
-To enable future-proof security, this blog will use OAuth 2.0 to secure APIs and clients. OAuth is a [family of specifications](https://datatracker.ietf.org/doc/html/rfc6749) for protecting data. Solutions are JSON based and work well in all API, web and mobile technologies, to provide modern security capabilities and improve productivity. OAuth is designed to scale across many components in a software platform.
+To enable future-proof security, this blog will use OAuth 2.0 to secure APIs and clients. OAuth is a [family of specifications](https://datatracker.ietf.org/doc/html/rfc6749) for protecting data. Solutions are JSON-based and work well in all API, web and mobile technologies, to provide modern security capabilities. OAuth is designed to scale across many components in a software platform.
 
 Yet I have often seen people struggle to implement OAuth and realise its benefits, since it is a distributed architecture with many moving parts. An organization needs to introduce an intricate new component called the *Authorization Server* that outsources the deeper security from applications. You also need to make design choices that require insight, at both an architecture level and a code level.
 
 ### Blog Goals
 
-This blog first shows developers how to get secure end-to-end API and client flows working. This blog’s security only covers the use of JWT access tokens in APIs and externalising user authentication from clients by running an OpenID Connect code flow. It then dives deeper to explain some lessons I’ve learned related to resilient API and client journeys:
+This blog first shows developers how to get secure end-to-end API and client flows working. This blog’s security only covers the use of JWT access tokens in APIs and externalising user authentication from clients using an OpenID Connect code flow. It then dives deeper to explain some lessons I’ve learned related to resilient API and client journeys:
 
 - Designing for <span style={{color:'green'}}>**manageability**</span> to avoid pain points.
 - Coding with <span style={{color:'green'}}>**portability**</span> to keep future options open.
-- Ensuring <span style={{color:'green'}}>**reliability**</span> by rehearsing failure scenarios.
-- Enabling <span style={{color:'green'}}>**productivity**</span> by also considering developer setups.
+- Ensuring <span style={{color:'green'}}>**reliability**</span> by rehearsal of failure scenarios.
+- Enabling <span style={{color:'green'}}>**productivity**</span> due to a focus on developer setups.
 
 ### Code Samples
 
@@ -38,7 +38,7 @@ This blog is code-centric with a focus on clean code, with security and other pl
 
 ![repos](/images/1/repos.jpg)
 
-The samples cover a journey that starts with ensuring a good developer setup. Next, OAuth is used to secure each app and API. Finally, reliability conditions are dealt with, as would be needed in any production system. Any reader can run the code samples as working solutions and borrow ideas from the code. By default they point to my lost cost cloud authorization server, or they can be repointed to your own.
+The samples cover a journey that starts with ensuring a good developer setup. Next, OAuth is used to secure clients and APIs. Finally, reliability conditions are handled, as you would need in any production system. Any reader can run the code samples as working solutions and borrow ideas from the code. By default they point to my lost cost cloud authorization server, or you can repoint them to your own.
 
 ### Where Are We?
 
